--- a/scss/_demo.scss
+++ b/scss/_demo.scss
@@ -31,7 +31,7 @@ $padding-lg:10px;
 
 $margin-sm:5px;
 $margin-lg:15px;
-$main-width: 14*80+2+2*$padding-lg;
+$main-width: 100%; //14*80+2+2*$padding-lg;
 
 *{
   box-sizing: border-box;
